--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router": "^6.14.2",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.7.20",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
